After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750938 - GeglNode::computed is not emitted for graphs
GeglNode::computed is not emitted for graphs
Status: RESOLVED FIXED
Product: GEGL
Classification: Other
Component: core
git master
Other All
: Normal normal
: ---
Assigned To: Default Gegl Component Owner
Default Gegl Component Owner
Depends on:
Blocks:
 
 
Reported: 2015-06-14 16:22 UTC by Debarshi Ray
Modified: 2015-06-14 17:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GeglNode: Relay the computed signal from the output proxy to the graph (1.46 KB, patch)
2015-06-14 16:23 UTC, Debarshi Ray
none Details | Review
GeglNode: Clean up the computed handlers (1.46 KB, patch)
2015-06-14 17:10 UTC, Debarshi Ray
committed Details | Review
GeglNode: Relay the computed signal from the output proxy to the graph (923 bytes, patch)
2015-06-14 17:10 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2015-06-14 16:22:03 UTC
I think we should relay the computed signal from the output proxy of a graph, just like it is done for invalidated. Otherwise it won't be emitted for graphs.
Comment 1 Debarshi Ray 2015-06-14 16:23:45 UTC
Created attachment 305243 [details] [review]
GeglNode: Relay the computed signal from the output proxy to the graph
Comment 2 Debarshi Ray 2015-06-14 17:10:09 UTC
Created attachment 305246 [details] [review]
GeglNode: Clean up the computed handlers
Comment 3 Debarshi Ray 2015-06-14 17:10:44 UTC
Created attachment 305247 [details] [review]
GeglNode: Relay the computed signal from the output proxy to the graph
Comment 4 Debarshi Ray 2015-06-14 17:42:08 UTC
From #gegl on GIMPNet:

17:11 <rishi> drawoc: Attached new patches to                                   
      https://bugzilla.gnome.org/show_bug.cgi?id=750938
17:39 <rishi> drawoc: Ok to push?
17:40 <drawoc> rishi: yep, both look good to me. :)