GeglNode: Clean up the computed handlers

https://bugzilla.gnome.org/show_bug.cgi?id=750938